--- a/app/views/depot/products/index.html.erb
+++ b/app/views/depot/products/index.html.erb
@@ -1,14 +1,13 @@
-<%= notice %>
+<p id="notice"><%= notice %></p>
 
-<h2>Products</h2>
+<h1>Products</h1>
 
 <% if @products.present? %>
   <table>
     <thead>
       <tr>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Image Url</th>
+        <th>Image</th>
+        <th>Item</th>
         <th>Price</th>
         <th>Actions</th>
       </tr>
@@ -16,16 +15,25 @@
 
     <tbody>
       <% @products.each do |product| %>
-        <tr>
-          <th><%= product.title %></th>
-          <th><%= truncate(strip_tags(product.description), length: 80) %></th>
-          <th><%= image_tag(product.image_url, class: 'list_image') if product.image_url.present? %></th>
-          <th><%= product.price %></th>
-          <th>
+        <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
+          <td>
+            <%= image_tag(product.image_url, class: 'list_image') if product.image_url.present? %>
+          </td>
+
+          <td class="list_description">
+            <dl>
+              <dt><%= product.title %></dt>
+              <dd><%= truncate(strip_tags(product.description), length: 80) %></dd>
+            </dl>
+          </td>
+
+          <td><%= product.price %></td>
+
+          <td class="list_actions">
             <%= link_to 'Show', product %>
             <%= link_to 'Edit', edit_depot_product_path(product) %>
             <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-          </th>
+          </td>
         </tr>
       <% end %>
     </tbody>
